force-app/main/default/objects/Rule_Condition__c/Rule_Condition__c.object-meta.xml
<CustomObject>
    <label>Rule Condition</label>
    <nameField>
        <label>Rule Condition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>