force-app/main/default/objects/Rule_Condition__c/fields/Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field__c</fullName>
    <label>Condition Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>