force-app/main/default/objects/Rule_Condition__c/fields/ConditionIndex__c.field-meta.xml
<CustomField>
    <fullName>ConditionIndex__c</fullName>
    <label>Condition Index</label>
    <length>100</length>
    <type>Text</type>
</CustomField>