force-app/main/default/objects/Rule_Condition__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>Data Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>