force-app/main/default/objects/Rule_Condition__c/fields/Evaluation_Object__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Object__c</fullName>
    <label>Evaluation Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>DxCPQ__Product_Attribute__c</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>DxCPQ__Quote__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>