force-app/main/default/objects/Rule_Condition__c/fields/Is_Cart_Item_Condition__c.field-meta.xml
<CustomField>
    <fullName>Is_Cart_Item_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cart Item Condition</label>
    <type>Checkbox</type>
</CustomField>