force-app/main/default/objects/Rule_Condition__c/fields/Parent_Evaluation_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Evaluation_Object__c</fullName>
    <formula>Text(Rule__r.Evaluation_Object__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Evaluation Object</label>
    <type>Text</type>
</CustomField>