force-app/main/default/objects/Rule_Condition__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>