force-app/main/default/objects/Rule_Condition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rule__c</columns>
    <columns>Evaluation_Object__c</columns>
    <columns>DataType__c</columns>
    <columns>ConditionIndex__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>